--- a/Dictionary_Function_Loop_Condition_2025.ipynb
+++ b/Dictionary_Function_Loop_Condition_2025.ipynb
@@ -2332,7 +2332,7 @@
         },
         "outputId": "22faca6c-f1f8-47aa-b4ad-dc28babe0e29"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2403,7 +2403,7 @@
         "id": "qP7Boo3nV78y",
         "outputId": "90f5b4b3-ba94-40f1-fa0c-92326e4c6211"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2506,7 +2506,7 @@
         },
         "outputId": "ac2a0f8d-4c81-42d9-a7f1-f64336dbf225"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2677,15 +2677,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# HW3 เพิ่ม ฟังก์ชั่นแปลงวินาทีกลับมาเป็น ชั่วโมง นาที วินาที โดยไม่ใช่ฟังก์ชั่นช่วยเหลืออื่นๆของ python (~~import~~) ถ้าส่วนของ ชั่วโมง นาที วินาที เป็นศูนย์ ไม่ต้องแสดง"
-      ],
-      "metadata": {
-        "id": "JMvgwO7tgxSZ"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "sSySEFHNbPql"
       },
@@ -2725,17 +2716,17 @@
     {
       "cell_type": "code",
       "source": [
-        "if (1>0) & (0>-1):\n",
-        "    print(True & True)"
+        "a = 2<3\n",
+        "print(a)"
       ],
       "metadata": {
-        "id": "ES5d1z0ti306",
-        "outputId": "4bc178b2-a5d8-4476-e02c-c87ddd5b91ce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GR8OBmCbSAgF",
+        "outputId": "95bdcf03-b96d-4f7b-fda7-600ed402b90d"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -2749,23 +2740,23 @@
     {
       "cell_type": "code",
       "source": [
-        "if 'T' in 'Thanapong':\n",
-        "    print('T in Thanapong')"
+        "b = 7 in range(7)\n",
+        "print(b)"
       ],
       "metadata": {
-        "id": "3COnyOTKipAc",
-        "outputId": "d50e2919-9cbc-41fb-d20f-6e5a371ebba1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-fr8wX_2SKEs",
+        "outputId": "509f77a5-3453-4b6d-a0b0-9bdb038d0b72"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "T in Thanapong\n"
+            "False\n"
           ]
         }
       ]
@@ -2773,14 +2764,126 @@
     {
       "cell_type": "code",
       "source": [
-        "def return_nothing(x):\n",
-        "    x = x+1"
+        "a & b"
       ],
       "metadata": {
-        "id": "01N3TOG9k3ti"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d9hlnIfzSpob",
+        "outputId": "2bc4cdc7-7ef2-48a3-f755-3ea49650b2e1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a | b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IDWdBWcpSsfS",
+        "outputId": "b36bfc95-2c0b-403f-b7ba-98c38e7962e9"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if 2<3 & 7 in range(7):\n",
+        "    print('yes')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Up5D8zndS5LM",
+        "outputId": "df835be0-f5bd-4f27-a337-c9d67387e7b8"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "yes\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if (1>0) & (0>-1):\n",
+        "    print(True & True)"
+      ],
+      "metadata": {
+        "id": "ES5d1z0ti306",
+        "outputId": "7820b0be-5549-4b39-846e-e14f021ed149",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if 'A' in 'PAWINEE':\n",
+        "    print('A in PAWINEE')"
+      ],
+      "metadata": {
+        "id": "3COnyOTKipAc",
+        "outputId": "8ff3163f-d646-4130-e2ed-316b6144e802",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A in PAWINEE\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2790,7 +2893,7 @@
       "metadata": {
         "id": "drWbuBwNldOL"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -2801,12 +2904,12 @@
       ],
       "metadata": {
         "id": "pOj0pkEEkbuW",
-        "outputId": "29d5bf18-d242-40f3-a542-26c39aa2fcca",
+        "outputId": "25d4f750-009c-44b3-db8f-c0d7c7583c64",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -2818,13 +2921,123 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## break คือ ออกจาก loop"
+      ],
       "metadata": {
-        "id": "y1ET-H8ylyxP"
+        "id": "RxqRok_oT0Rr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [0,2,8,24,5,60,70,81,9,10]\n",
+        "#สร้าง function ตรวจสอบว่าใน list มีเลขคี่หริอเปล่า\n",
+        "def check_odd_in_list(input_list):\n",
+        "    for i in input_list:\n",
+        "        if i % 2 != 0:\n",
+        "            print(f'มีเลขคี่ คือ {i}')\n",
+        "    print('ไม่มีเลขคี่')\n",
+        "check_odd_in_list(numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y0PvMK9yWnvj",
+        "outputId": "8c4f973b-ae88-4036-84c6-ac93cb98893c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "มีเลขคี่ คือ 5\n",
+            "มีเลขคี่ คือ 81\n",
+            "มีเลขคี่ คือ 9\n",
+            "ไม่มีเลขคี่\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [0,2,8,24,5,60,70,81,9,10]\n",
+        "#สร้าง function ตรวจสอบว่าใน list มีเลขคี่หริอเปล่า\n",
+        "def check_odd_in_list(input_list):\n",
+        "    for i in input_list:\n",
+        "        if i % 2 != 0:\n",
+        "            print(f'มีเลขคี่ คือ {i}')\n",
+        "            break\n",
+        "    print('ไม่มีเลขคี่')\n",
+        "check_odd_in_list(numbers)"
+      ],
+      "metadata": {
+        "id": "y1ET-H8ylyxP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "baa7047e-dd2c-439e-eef0-ad10bd2f071e"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "มีเลขคี่ คือ 5\n",
+            "ไม่มีเลขคี่\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [0,2,8,24,5,60,70,81,9,10]\n",
+        "#สร้าง function ตรวจสอบว่าใน list มีเลขคี่หริอเปล่า\n",
+        "def check_odd_in_list(input_list):\n",
+        "    for i in input_list:\n",
+        "        if i % 2 != 0:\n",
+        "            print(f'มีเลขคี่ คือ {i}')\n",
+        "            return\n",
+        "    print('ไม่มีเลขคี่')\n",
+        "    return input_list\n",
+        "\n",
+        "check_odd_in_list(numbers)\n",
+        "check_odd_in_list([0,2,8,24])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CIwsLVHIWzgc",
+        "outputId": "8f82d66d-0703-4f85-d6a5-ca2570197b8b"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "มีเลขคี่ คือ 5\n",
+            "ไม่มีเลขคี่\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 2, 8, 24]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
     },
     {
       "cell_type": "markdown",
