--- a/Pandas_101_2025.ipynb
+++ b/Pandas_101_2025.ipynb
@@ -40,7 +40,7 @@
       "metadata": {
         "id": "irWbqOM7nDCb"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -339,7 +339,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -652,7 +652,7 @@
         },
         "outputId": "4b97e286-9f81-4bce-c4f6-b869f6b0242e"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1219,7 +1219,7 @@
       "metadata": {
         "id": "Z9TKACC3Vug8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1230,18 +1230,18 @@
       ],
       "metadata": {
         "id": "rONul04Tspkt",
-        "outputId": "087c9d02-644e-4dc9-99ab-5e93552d417c",
+        "outputId": "9e7e4857-4b9d-4044-d296-e0e14c490905",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -1254,7 +1254,7 @@
       "metadata": {
         "id": "HTLAUjeCrvHc"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1281,7 +1281,7 @@
         },
         "collapsed": true
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1923,7 +1923,7 @@
       "source": [
         "stopandsearch_df.head()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2344,7 +2344,7 @@
           "height": 605
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2770,7 +2770,7 @@
       "source": [
         "stopandsearch_df.shape"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2815,7 +2815,7 @@
       "source": [
         "stopandsearch_df['Outcome']"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2925,7 +2925,7 @@
         "id": "lW1fz81OaYwF",
         "outputId": "b517f659-64ee-48ea-80dc-b8457e49e715"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2955,7 +2955,7 @@
           "height": 147
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3025,7 +3025,7 @@
       "metadata": {
         "id": "b7YqTUwCW0Is"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3040,7 +3040,7 @@
         "id": "xx7eRSEZX-Zt",
         "outputId": "ddcd145f-ffe4-4f6d-d793-94a7b2e07a05"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3066,7 +3066,7 @@
         "id": "gn7ugYyTX-a-",
         "outputId": "3ca5be86-ed01-4de5-d4db-ab3742d50f9e"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3102,7 +3102,7 @@
       "source": [
         "stopandsearch_df.iloc[200,-3]"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3132,7 +3132,7 @@
         "id": "8vSg7Xgab5ir",
         "outputId": "470d85b1-aaf2-407c-fffc-f0c8d4a461ba"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3182,7 +3182,7 @@
         "                                  'Longitude','Latitude','Self-defined ethnicity']][:5]\n",
         "smaller_table"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3584,7 +3584,7 @@
       "source": [
         "stopandsearch_df.iloc[1:5,:-10]"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3918,7 +3918,7 @@
           "height": 458
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4028,7 +4028,7 @@
       "source": [
         "stopandsearch_df[stopandsearch_df['Part of a policing operation']==True] #ถ้าอยากนำตารางนี้ไปใช้ ต้องสร้างตัวแปรใหม่มารองรับ"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4623,7 +4623,7 @@
         "id": "Aun6rt5zhU5c",
         "outputId": "05baa99e-75a7-43fa-c51c-a57a8c768957"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5004,7 +5004,7 @@
         "id": "4JqbRtnrhdf0",
         "outputId": "7eaeec06-d0c1-4d2f-a9e8-a01a992a6944"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5308,7 +5308,7 @@
       "metadata": {
         "id": "dJ9sqkvViV0Q"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5319,7 +5319,7 @@
       "metadata": {
         "id": "9eERH9lAivUO"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5335,7 +5335,7 @@
           "height": 1000
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6389,7 +6389,7 @@
         },
         "outputId": "49643465-86b2-44ad-bb5c-99c873fdc173"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6421,7 +6421,7 @@
         "id": "SQb2fCVKpS5L",
         "outputId": "57f384de-d915-4b0a-8ac2-d6525c38dae0"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6444,160 +6444,86 @@
     {
       "cell_type": "code",
       "source": [
-        "os.listdir('/content/drive/MyDrive/Python&DataViz2025/2025-02')"
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "import pandas as pd\n",
+        "import os\n",
+        "\n",
+        "# ฟังก์ชันอ่านไฟล์ทั้งหมด เก็บข้อมูลลง list ที่เพิ่มคอลัมน์ชื่อเมืองเข้าไป\n",
+        "def read_all_data(base_path):\n",
+        "    all_dfs = []  # สร้าง list เปล่าเพื่อเอาไว้เก็บไฟล์ทั้งหมด\n",
+        "    months = os.listdir(base_path)  # สร้างตัวแปรเพื่อเก็บโฟลเดอร์ดือนทั้งหมด\n",
+        "\n",
+        "    for month in months:\n",
+        "        month_path = os.path.join(base_path, month) # เชื่อม basepath กับชื่อเดือนเป็นเส้นทางของแต่ละเดือน\n",
+        "        if not os.path.isdir(month_path):\n",
+        "            continue\n",
+        "        files = os.listdir(month_path) #สร้างตัวแปรเพื่อเก็บชื่อไฟล์ทั้งหมดที่อยู่ในเดือนนั้น\n",
+        "        for file in files:\n",
+        "            if 'stop-and-search' in file: #ดำเนินการเฉพาะไฟล์ 'stop-and-search' ทุกเมือง\n",
+        "                filepath = os.path.join(month_path, file) # สร้างไฟล์พาทที่มีไฟล์เฉพาะ stop-and-search\n",
+        "                df = pd.read_csv(filepath) # สร้าตัวแปรมารับตาราง\n",
+        "                city = file.replace('-stop-and-search.csv', '').split('-', 2)[-1] # เลือกมาแค่ชื่อเมือง\n",
+        "                df['Police Force'] = city # นำชื่อเมืองมาสร้างคอลัมน์ใหม่ใน df\n",
+        "                all_dfs.append(df) #เพิ่ม df ใน all_dfs\n",
+        "\n",
+        "    return all_dfs #คืนค่าตารางทั้งหมดที่้พิ่มเข้ามาเรือยๆ\n",
+        "\n",
+        "# ฟังก์ชันนับจำนวนคนเชื้อสายเอเชีย รวมทุกไฟล์\n",
+        "def count_asian_people(all_dfs):\n",
+        "    asian_counts = {}  # สร้าง dictionary ว่าง เพื่อเก็บจำนวนคนเชื้อสายเอเชียของแต่ละเมือง\n",
+        "\n",
+        "    for df in all_dfs:  # วนลูปดูข้อมูลในแต่ละ DataFrame ที่เก็บมาใน list\n",
+        "        # Filter for rows where 'Self-defined ethnicity' contains 'Asian'\n",
+        "        asian_df = df[df['Self-defined ethnicity'].str.contains('Asian', na=False)]\n",
+        "        if not asian_df.empty:\n",
+        "            city = asian_df['Police Force'].iloc[0]\n",
+        "\n",
+        "            if city in asian_counts:\n",
+        "                asian_counts[city] += len(asian_df)\n",
+        "            else:\n",
+        "                asian_counts[city] = len(asian_df)\n",
+        "\n",
+        "    return asian_counts  # คืนค่า dictionary ที่เก็บจำนวนคนเชื้อสายเอเชียของแต่ละเมือง\n",
+        "\n",
+        "# ส่วนหลักของโปรแกรม\n",
+        "base_path = '/content/drive/MyDrive/Python&DataViz2025'\n",
+        "\n",
+        "# อ่านข้อมูลจากไฟล์ทั้งหมด\n",
+        "dataframes = read_all_data(base_path)\n",
+        "\n",
+        "# นับคนเชื้อสายเอเชียรวมทั้ง 5 เดือน\n",
+        "counts = count_asian_people(dataframes)\n",
+        "\n",
+        "# หามากที่สุดและน้อยที่สุด\n",
+        "if counts:\n",
+        "    most_city = max(counts, key=counts.get)\n",
+        "    fewest_city = min(counts, key=counts.get)\n",
+        "\n",
+        "    # แสดงผลทุกเมือง\n",
+        "    print(f\"เมืองที่มีจำนวนผู้ถูกเรียกค้นที่เป็นคน Asia น้อยที่สุด: {fewest_city} ({counts[fewest_city]} คน)\")\n",
+        "    print(f\"เมืองที่มีจำนวนผู้ถูกเรียกค้นที่เป็นคน Asia มากที่สุด: {most_city} ({counts[most_city]} คน)\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
-        "id": "vHklLk1CrueB",
-        "outputId": "be4171ee-6c9c-45d2-f9ee-9eb13c9e9881"
+        "id": "lJXTQCU5gYjZ",
+        "outputId": "ac39bd04-c291-4a44-87b2-4cb83162330d"
       },
-      "execution_count": 61,
+      "execution_count": 29,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['2025-02-warwickshire-stop-and-search.csv',\n",
-              " '2025-02-suffolk-stop-and-search.csv',\n",
-              " '2025-02-nottinghamshire-stop-and-search.csv',\n",
-              " '2025-02-south-yorkshire-stop-and-search.csv',\n",
-              " '2025-02-sussex-stop-and-search.csv',\n",
-              " '2025-02-west-midlands-stop-and-search.csv',\n",
-              " '2025-02-south-wales-stop-and-search.csv',\n",
-              " '2025-02-west-yorkshire-stop-and-search.csv',\n",
-              " '2025-02-west-mercia-stop-and-search.csv',\n",
-              " '2025-02-staffordshire-stop-and-search.csv',\n",
-              " '2025-02-surrey-stop-and-search.csv',\n",
-              " '2025-02-north-wales-stop-and-search.csv',\n",
-              " '2025-02-norfolk-stop-and-search.csv',\n",
-              " '2025-02-northamptonshire-stop-and-search.csv',\n",
-              " '2025-02-northumbria-stop-and-search.csv',\n",
-              " '2025-02-leicestershire-stop-and-search.csv',\n",
-              " '2025-02-thames-valley-stop-and-search.csv',\n",
-              " '2025-02-gloucestershire-outcomes.csv',\n",
-              " '2025-02-gwent-street.csv',\n",
-              " '2025-02-thames-valley-street.csv',\n",
-              " '2025-02-hampshire-stop-and-search.csv',\n",
-              " '2025-02-leicestershire-outcomes.csv',\n",
-              " '2025-02-hertfordshire-stop-and-search.csv',\n",
-              " '2025-02-devon-and-cornwall-street.csv',\n",
-              " '2025-02-surrey-street.csv',\n",
-              " '2025-02-northamptonshire-outcomes.csv',\n",
-              " '2025-02-gloucestershire-street.csv',\n",
-              " '2025-02-north-yorkshire-street.csv',\n",
-              " '2025-02-bedfordshire-stop-and-search.csv',\n",
-              " '2025-02-kent-outcomes.csv',\n",
-              " '2025-02-nottinghamshire-outcomes.csv',\n",
-              " '2025-02-suffolk-street.csv',\n",
-              " '2025-02-wiltshire-street.csv',\n",
-              " '2025-02-cumbria-stop-and-search.csv',\n",
-              " '2025-02-cambridgeshire-stop-and-search.csv',\n",
-              " '2025-02-lancashire-outcomes.csv',\n",
-              " '2025-02-west-mercia-street.csv',\n",
-              " '2025-02-northumbria-street.csv',\n",
-              " '2025-02-dorset-outcomes.csv',\n",
-              " '2025-02-essex-stop-and-search.csv',\n",
-              " '2025-02-btp-stop-and-search.csv',\n",
-              " '2025-02-avon-and-somerset-street.csv',\n",
-              " '2025-02-lancashire-street.csv',\n",
-              " '2025-02-dyfed-powys-outcomes.csv',\n",
-              " '2025-02-cheshire-outcomes.csv',\n",
-              " '2025-02-lincolnshire-street.csv',\n",
-              " '2025-02-cheshire-stop-and-search.csv',\n",
-              " '2025-02-suffolk-outcomes.csv',\n",
-              " '2025-02-warwickshire-outcomes.csv',\n",
-              " '2025-02-devon-and-cornwall-outcomes.csv',\n",
-              " '2025-02-durham-outcomes.csv',\n",
-              " '2025-02-derbyshire-street.csv',\n",
-              " '2025-02-cleveland-street.csv',\n",
-              " '2025-02-merseyside-stop-and-search.csv',\n",
-              " '2025-02-derbyshire-stop-and-search.csv',\n",
-              " '2025-02-dorset-street.csv',\n",
-              " '2025-02-cambridgeshire-street.csv',\n",
-              " '2025-02-south-yorkshire-outcomes.csv',\n",
-              " '2025-02-cumbria-street.csv',\n",
-              " '2025-02-leicestershire-street.csv',\n",
-              " '2025-02-norfolk-street.csv',\n",
-              " '2025-02-north-wales-outcomes.csv',\n",
-              " '2025-02-cleveland-stop-and-search.csv',\n",
-              " '2025-02-metropolitan-outcomes.csv',\n",
-              " '2025-02-lincolnshire-outcomes.csv',\n",
-              " '2025-02-devon-and-cornwall-stop-and-search.csv',\n",
-              " '2025-02-cumbria-outcomes.csv',\n",
-              " '2025-02-dorset-stop-and-search.csv',\n",
-              " '2025-02-cambridgeshire-outcomes.csv',\n",
-              " '2025-02-south-yorkshire-street.csv',\n",
-              " '2025-02-merseyside-outcomes.csv',\n",
-              " '2025-02-metropolitan-stop-and-search.csv',\n",
-              " '2025-02-bedfordshire-outcomes.csv',\n",
-              " '2025-02-city-of-london-street.csv',\n",
-              " '2025-02-essex-outcomes.csv',\n",
-              " '2025-02-warwickshire-street.csv',\n",
-              " '2025-02-north-wales-street.csv',\n",
-              " '2025-02-dyfed-powys-street.csv',\n",
-              " '2025-02-merseyside-street.csv',\n",
-              " '2025-02-dyfed-powys-stop-and-search.csv',\n",
-              " '2025-02-west-midlands-outcomes.csv',\n",
-              " '2025-02-gwent-outcomes.csv',\n",
-              " '2025-02-city-of-london-stop-and-search.csv',\n",
-              " '2025-02-wiltshire-outcomes.csv',\n",
-              " '2025-02-lancashire-stop-and-search.csv',\n",
-              " '2025-02-kent-stop-and-search.csv',\n",
-              " '2025-02-avon-and-somerset-stop-and-search.csv',\n",
-              " '2025-02-avon-and-somerset-outcomes.csv',\n",
-              " '2025-02-staffordshire-outcomes.csv',\n",
-              " '2025-02-bedfordshire-street.csv',\n",
-              " '2025-02-durham-stop-and-search.csv',\n",
-              " '2025-02-west-mercia-outcomes.csv',\n",
-              " '2025-02-city-of-london-outcomes.csv',\n",
-              " '2025-02-durham-street.csv',\n",
-              " '2025-02-south-wales-outcomes.csv',\n",
-              " '2025-02-gloucestershire-stop-and-search.csv']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 61
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "เมืองที่มีจำนวนผู้ถูกเรียกค้นที่เป็นคน Asia น้อยที่สุด: durham (5 คน)\n",
+            "เมืองที่มีจำนวนผู้ถูกเรียกค้นที่เป็นคน Asia มากที่สุด: west-midlands (2104 คน)\n"
+          ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Fb6bvnJWr-tj"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "jfRoT1Far-1g"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "xFXISMUFr-7J"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Yqru7OPxr_EJ"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -14680,7 +14606,7 @@
         "\n",
         "print(f\"In February 2025, there were {cambridge_feb_count} 'White-English' stop and searches in Cambridgeshire.\")"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
