--- a/Pandas_101_2025.ipynb
+++ b/Pandas_101_2025.ipynb
@@ -1235,7 +1235,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6445,82 +6445,79 @@
       "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "\n",
         "import pandas as pd\n",
         "import os\n",
+        "from collections import defaultdict\n",
         "\n",
-        "# ฟังก์ชันอ่านไฟล์ทั้งหมด เก็บข้อมูลลง list ที่เพิ่มคอลัมน์ชื่อเมืองเข้าไป\n",
+        "# Mount Google Drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# อ่านข้อมูลทั้งหมดจากโฟลเดอร์ย่อยใน base_path\n",
         "def read_all_data(base_path):\n",
-        "    all_dfs = []  # สร้าง list เปล่าเพื่อเอาไว้เก็บไฟล์ทั้งหมด\n",
-        "    months = os.listdir(base_path)  # สร้างตัวแปรเพื่อเก็บโฟลเดอร์ดือนทั้งหมด\n",
-        "\n",
-        "    for month in months:\n",
-        "        month_path = os.path.join(base_path, month) # เชื่อม basepath กับชื่อเดือนเป็นเส้นทางของแต่ละเดือน\n",
+        "    all_data = []\n",
+        "    for month in os.listdir(base_path):\n",
+        "        month_path = os.path.join(base_path, month)\n",
         "        if not os.path.isdir(month_path):\n",
         "            continue\n",
-        "        files = os.listdir(month_path) #สร้างตัวแปรเพื่อเก็บชื่อไฟล์ทั้งหมดที่อยู่ในเดือนนั้น\n",
-        "        for file in files:\n",
-        "            if 'stop-and-search' in file: #ดำเนินการเฉพาะไฟล์ 'stop-and-search' ทุกเมือง\n",
-        "                filepath = os.path.join(month_path, file) # สร้างไฟล์พาทที่มีไฟล์เฉพาะ stop-and-search\n",
-        "                df = pd.read_csv(filepath) # สร้าตัวแปรมารับตาราง\n",
-        "                city = file.replace('-stop-and-search.csv', '').split('-', 2)[-1] # เลือกมาแค่ชื่อเมือง\n",
-        "                df['Police Force'] = city # นำชื่อเมืองมาสร้างคอลัมน์ใหม่ใน df\n",
-        "                all_dfs.append(df) #เพิ่ม df ใน all_dfs\n",
+        "        for file in os.listdir(month_path):\n",
+        "            if 'stop-and-search' not in file:\n",
+        "                continue\n",
+        "            stopandsearchpath = os.path.join(month_path, file)\n",
+        "            try:\n",
+        "                df = pd.read_csv(stopandsearchpath)\n",
+        "                # ตัดชื่อไฟล์เพื่อเอาแค่ชื่อเมือง เช่น \"avon-and-somerset\"\n",
+        "                city = file.replace('-stop-and-search.csv', '').split('-', 2)[-1].strip()\n",
+        "                df['Police Force'] = city\n",
+        "                all_data.append(df)\n",
+        "            except Exception as e:\n",
+        "                print(f\"Error reading {stopandsearchpath}: {e}\")\n",
+        "    return all_data\n",
         "\n",
-        "    return all_dfs #คืนค่าตารางทั้งหมดที่้พิ่มเข้ามาเรือยๆ\n",
-        "\n",
-        "# ฟังก์ชันนับจำนวนคนเชื้อสายเอเชีย รวมทุกไฟล์\n",
+        "# นับจำนวนคนเชื้อสายเอเชีย\n",
         "def count_asian_people(all_dfs):\n",
-        "    asian_counts = {}  # สร้าง dictionary ว่าง เพื่อเก็บจำนวนคนเชื้อสายเอเชียของแต่ละเมือง\n",
-        "\n",
-        "    for df in all_dfs:  # วนลูปดูข้อมูลในแต่ละ DataFrame ที่เก็บมาใน list\n",
-        "        # Filter for rows where 'Self-defined ethnicity' contains 'Asian'\n",
+        "    asian_counts = defaultdict(int)\n",
+        "    for df in all_dfs:\n",
         "        asian_df = df[df['Self-defined ethnicity'].str.contains('Asian', na=False)]\n",
         "        if not asian_df.empty:\n",
         "            city = asian_df['Police Force'].iloc[0]\n",
+        "            asian_counts[city] += len(asian_df)\n",
+        "    return dict(asian_counts)\n",
         "\n",
-        "            if city in asian_counts:\n",
-        "                asian_counts[city] += len(asian_df)\n",
-        "            else:\n",
-        "                asian_counts[city] = len(asian_df)\n",
-        "\n",
-        "    return asian_counts  # คืนค่า dictionary ที่เก็บจำนวนคนเชื้อสายเอเชียของแต่ละเมือง\n",
-        "\n",
-        "# ส่วนหลักของโปรแกรม\n",
+        "# === Main execution ===\n",
         "base_path = '/content/drive/MyDrive/Python&DataViz2025'\n",
         "\n",
-        "# อ่านข้อมูลจากไฟล์ทั้งหมด\n",
+        "# โหลดข้อมูล\n",
         "dataframes = read_all_data(base_path)\n",
         "\n",
-        "# นับคนเชื้อสายเอเชียรวมทั้ง 5 เดือน\n",
+        "# คำนวณจำนวนคนเชื้อสายเอเชีย\n",
         "counts = count_asian_people(dataframes)\n",
         "\n",
-        "# หามากที่สุดและน้อยที่สุด\n",
+        "# แสดงผล\n",
         "if counts:\n",
         "    most_city = max(counts, key=counts.get)\n",
         "    fewest_city = min(counts, key=counts.get)\n",
         "\n",
-        "    # แสดงผลทุกเมือง\n",
-        "    print(f\"เมืองที่มีจำนวนผู้ถูกเรียกค้นที่เป็นคน Asia น้อยที่สุด: {fewest_city} ({counts[fewest_city]} คน)\")\n",
-        "    print(f\"เมืองที่มีจำนวนผู้ถูกเรียกค้นที่เป็นคน Asia มากที่สุด: {most_city} ({counts[most_city]} คน)\")"
+        "    print(f\"เมืองที่มีจำนวนผู้ถูกเรียกค้นที่เป็นคน Asia น้อยที่สุด คือเมือง {fewest_city} จำนวน {counts[fewest_city]} คน\")\n",
+        "    print(f\"เมืองที่มีจำนวนผู้ถูกเรียกค้นที่เป็นคน Asia มากที่สุด คือเมือง {most_city} จำนวน {counts[most_city]} คน\")\n",
+        "else:\n",
+        "    print(\"ไม่พบข้อมูลที่เกี่ยวข้องกับผู้มีเชื้อสายเอเชีย\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lJXTQCU5gYjZ",
-        "outputId": "ac39bd04-c291-4a44-87b2-4cb83162330d"
+        "outputId": "7a8a7894-3fa2-4027-8ab4-0a00ac0b1acb"
       },
-      "execution_count": 29,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "เมืองที่มีจำนวนผู้ถูกเรียกค้นที่เป็นคน Asia น้อยที่สุด: durham (5 คน)\n",
-            "เมืองที่มีจำนวนผู้ถูกเรียกค้นที่เป็นคน Asia มากที่สุด: west-midlands (2104 คน)\n"
+            "เมืองที่มีจำนวนผู้ถูกเรียกค้นที่เป็นคน Asia น้อยที่สุด คือเมือง durham จำนวน 5 คน\n",
+            "เมืองที่มีจำนวนผู้ถูกเรียกค้นที่เป็นคน Asia มากที่สุด คือเมือง west-midlands จำนวน 2104 คน\n"
           ]
         }
       ]
