--- a/Pandas_101_2025.ipynb
+++ b/Pandas_101_2025.ipynb
@@ -6509,7 +6509,7 @@
         "id": "lJXTQCU5gYjZ",
         "outputId": "7a8a7894-3fa2-4027-8ab4-0a00ac0b1acb"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6521,6 +6521,42 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## HW 5 (เดี่ยว) ***แก้จาก code เดิม*** ยอดรวมทุกเมือง เดือนไหนมีจำนวนผู้ถูกเรียกค้นที่เป็นคน Asian น้อยที่สุด และ มากที่สุด"
+      ],
+      "metadata": {
+        "id": "H_xz0xHkVXJ-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "WCBgD11DWLqq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "qYUWd-C0WLtw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "CqiC2rX_WLxg"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
